handover/prom/agent-2/deploy/components/logs-node/networkpolicy-logs-node.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logs-node-agent
  namespace: uamc-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: logs-node-agent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: agent-service
      ports:
        - protocol: TCP
          port: 8083
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8083
  egress:
    - {}
